The most significant changes involve the removal of the `SetUpSkipToAboutMe` method and the `setUpSkipToAboutMe` JavaScript function from the `JSInteropService.cs` and `a11y.js` files respectively. These were used to set up a skip to the "About Me" section of the website. Additionally, the CSS property `scroll-padding-top: 84px;` was added to the `html` selector in several CSS files to prevent overlapping of content with fixed positioned elements at the top of the page. Lastly, the `.hidden-until-focus` class was removed from the `app.min.css` file.
1. The `SetUpSkipToAboutMe` method was removed from the `JSInteropService.cs` file and the call to this method was also removed from the `MainLayout.razor` file. This method was used to set up a skip to the "About Me" section of the website. (Reference: `JSInteropService.cs`, `MainLayout.razor`)
2. The JavaScript function `setUpSkipToAboutMe` was removed from the `a11y.js` file. This function was used to add an event listener to the "Skip to About Me" button, which would scroll the page to the "About Me" section when clicked. (Reference: `a11y.js`)
3. The CSS property `scroll-padding-top: 84px;` was added to the `html` selector in the `app.css`, `app.min.css`, and `_defaults.scss` files. This property adds padding to the top of the scrolling box, which can prevent fixed positioned elements at the top of the page from overlapping with the content. (Reference: `app.css`, `app.min.css`, `_defaults.scss`)
4. The `.hidden-until-focus` class was removed from the `app.min.css` file. This class was used to hide elements until they receive focus, at which point they would become visible. (Reference: `app.min.css`)

--- a/com.DaltonPonder.sa/wwwroot/styles/app.css
+++ b/com.DaltonPonder.sa/wwwroot/styles/app.css
@@ -20,6 +20,7 @@ html {
   /*font-size: 16px;
   font-family: Roboto, Helvetica, Arial, sans-serif;*/
   overflow-x: hidden;
+  scroll-padding-top: 84px;
 }
 
 /*h1,
