--- a/com.DaltonPonder.sa/wwwroot/styles/scss/_defaults.scss
+++ b/com.DaltonPonder.sa/wwwroot/styles/scss/_defaults.scss
@@ -2,6 +2,7 @@
     /*font-size: 16px;
     font-family: Roboto, Helvetica, Arial, sans-serif;*/
     overflow-x: hidden;
+    scroll-padding-top: 84px;
 }
 
 /*h1,
